Added dark theme

--- a/passwords.html
+++ b/passwords.html
@@ -8,137 +8,138 @@
     <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/passwords.css">
+    <link rel="stylesheet" href="css/themes/dark.css">
     <script src="js/aes.js"></script>
     <script src="js/prepasswords.js"></script>
   </head>
-
-  <nav class="bg-white shadow">
-    <div class="max-w-7xl mx-auto px-2 sm:px-4 lg:px-8">
-      <div class="flex justify-between h-16">
-        <div class="flex px-2 lg:px-0">
-          <div class="flex-shrink-0 flex items-center">
-            <img class="block lg:hidden h-8 w-auto" src="images/logo.png" alt="Passky">
-            <img class="hidden lg:block h-8 w-auto" src="images/logo.png" alt="Passky">
+  <body>
+    <nav class="bg-white shadow">
+      <div class="max-w-7xl mx-auto px-2 sm:px-4 lg:px-8">
+        <div class="flex justify-between h-16">
+          <div class="flex px-2 lg:px-0">
+            <div class="flex-shrink-0 flex items-center">
+              <img class="block lg:hidden h-8 w-auto" src="images/logo.png" alt="Passky">
+              <img class="hidden lg:block h-8 w-auto" src="images/logo.png" alt="Passky">
+            </div>
+            <div id="desktop-menu" class="hidden lg:ml-6 lg:flex lg:space-x-8">
+              <a href="#" class="border-indigo-500 text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+                Passwords
+              </a>
+              <a href="export.html" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+                Import & Export
+              </a>
+              <a href="javascript:logout()" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+                Sign out
+              </a>
+            </div>
           </div>
-          <div class="hidden lg:ml-6 lg:flex lg:space-x-8">
-            <a href="#" class="border-indigo-500 text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-              Passwords
-            </a>
-            <a href="export.html" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-              Import & Export
-            </a>
-            <a href="javascript:logout()" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-              Sign out
-            </a>
+          <div class="flex-1 flex items-center justify-center px-2 lg:ml-6 lg:justify-end">
+            <div class="flex-shrink-0">
+              <input type="text" id="search" onkeyup="filterPasswords()" class="relative inline-flex shadow focus:outline-none px-4 py-2 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border-indigo-300 rounded-md" placeholder="Search">
+              <button type="button" onclick="changeDialog(0); show('dialog');" class="relative inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                Add Password
+              </button>
+            </div>
           </div>
-        </div>
-        <div class="flex-1 flex items-center justify-center px-2 lg:ml-6 lg:justify-end">
-          <div class="flex-shrink-0">
-            <input type="text" id="search" onkeyup="filterPasswords()" class="relative inline-flex shadow focus:outline-none px-4 py-2 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border-indigo-300 rounded-md" placeholder="Search">
-            <button type="button" onclick="changeDialog(0); show('dialog');" class="relative inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-              Add Password
+          <div class="flex items-center lg:hidden">
+            <button id="toggle-menu-btn" type="button" onclick="toggleMenu();" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none" aria-controls="mobile-menu" aria-expanded="false">
+              <span class="sr-only">Open main menu</span>
+              <svg id="mobile-menu-icon" xmlns="http://www.w3.org/2000/svg" class="block h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <line x1="4" y1="6" x2="20" y2="6" />
+                <line x1="4" y1="12" x2="20" y2="12" />
+                <line x1="4" y1="18" x2="20" y2="18" />
+              </svg>
             </button>
           </div>
         </div>
-        <div class="flex items-center lg:hidden">
-          <button type="button" onclick="toggleMenu();" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none" aria-controls="mobile-menu" aria-expanded="false">
-            <span class="sr-only">Open main menu</span>
-            <svg id="mobile-menu-icon" xmlns="http://www.w3.org/2000/svg" class="block h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-              <line x1="4" y1="6" x2="20" y2="6" />
-              <line x1="4" y1="12" x2="20" y2="12" />
-              <line x1="4" y1="18" x2="20" y2="18" />
-            </svg>
+      </div>
+    
+      <div class="lg:hidden">
+        <div id="mobile-menu" class="hidden pt-2 pb-3 space-y-1">
+          <a href="#" class="selected bg-indigo-50 border-indigo-500 text-indigo-700 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
+          <a href="export.html" class="border-transparent text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Import & Export</a>
+          <a href="javascript:logout()" class="border-transparent text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</a>
+        </div>
+      </div>
+    </nav>
+
+    <div class="flex flex-col">
+      <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+        <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+          <div class="table-border shadow overflow-hidden border-b border-gray-200">
+            <table id="table-passwords" class="min-w-full divide-y divide-gray-200">
+              <tbody class="bg-white divide-y divide-gray-200">
+                <script>
+                  if(sessionStorage.passwords !== null && typeof(sessionStorage.passwords) !== 'undefined'){
+                    const passwords = JSON.parse(sessionStorage.passwords);
+                    for(let i = 0; i < passwords.length; i++){
+                      displayPassword(passwords[i].id, passwords[i].website, passwords[i].username, passwords[i].password);
+                    }
+                  }
+                </script>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div id="delete-account" class="bg-white shadow">
+      <div class="px-4 py-5 sm:p-6">
+        <h3 class="text-lg leading-6 font-medium text-gray-900">
+          Delete your account
+        </h3>
+        <div class="mt-2 max-w-xl text-sm text-gray-500">
+          <p>
+            Once you delete your account, you will lose all data associated with it.
+          </p>
+        </div>
+        <div class="mt-5">
+          <button type="button" onclick="changeDialog(1); show('dialog');" class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
+            Delete account
           </button>
         </div>
       </div>
     </div>
-  
-    <div class="lg:hidden">
-      <div id="mobile-menu" class="hidden pt-2 pb-3 space-y-1">
-        <a href="#" class="bg-indigo-50 border-indigo-500 text-indigo-700 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
-        <a href="export.html" class="border-transparent text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Import & Export</a>
-        <a href="javascript:logout()" class="border-transparent text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</a>
-      </div>
-    </div>
-  </nav>
 
-  <div class="flex flex-col">
-    <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-      <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-          <table id="table-passwords" class="min-w-full divide-y divide-gray-200">
-            <tbody class="bg-white divide-y divide-gray-200">
-              <script>
-                if(sessionStorage.passwords !== null && typeof(sessionStorage.passwords) !== 'undefined'){
-                  const passwords = JSON.parse(sessionStorage.passwords);
-                  for(let i = 0; i < passwords.length; i++){
-                    displayPassword(passwords[i].id, passwords[i].website, passwords[i].username, passwords[i].password);
-                  }
-                }
-              </script>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="bg-white shadow sm:rounded-lg">
-    <div class="px-4 py-5 sm:p-6">
-      <h3 class="text-lg leading-6 font-medium text-gray-900">
-        Delete your account
-      </h3>
-      <div class="mt-2 max-w-xl text-sm text-gray-500">
-        <p>
-          Once you delete your account, you will lose all data associated with it.
-        </p>
-      </div>
-      <div class="mt-5">
-        <button type="button" onclick="changeDialog(1); show('dialog');" class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
-          Delete account
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <div id="dialog" class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="dialog-title" role="dialog" aria-modal="true" style="visibility: hidden;">
-    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-      <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
-      <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-      <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
-        <div class="sm:flex sm:items-start">
-          <div id="dialog-icon" class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
-            <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
-            </svg>
-          </div>
-          <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-            <h3 class="text-lg leading-6 font-medium text-gray-900" id="dialog-title">
-              Delete account
-            </h3>
-            <div class="mt-2">
-              <p class="text-sm text-gray-500" id="dialog-text">
-                Are you sure you want to delete your account? All of your data will be permanently removed from server forever. This action cannot be undone.
-              </p>
+    <div id="dialog" class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="dialog-title" role="dialog" aria-modal="true" style="visibility: hidden;">
+      <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+        <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+          <div class="sm:flex sm:items-start">
+            <div id="dialog-icon" class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+              <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+              </svg>
+            </div>
+            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+              <h3 class="text-lg leading-6 font-medium text-gray-900" id="dialog-title">
+                Delete account
+              </h3>
+              <div class="mt-2">
+                <p class="text-sm text-gray-500" id="dialog-text">
+                  Are you sure you want to delete your account? All of your data will be permanently removed from server forever. This action cannot be undone.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="mt-5 sm:mt-4 sm:ml-10 sm:pl-4 sm:flex">
-          <button id="dialog-button" type="button" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:w-auto sm:text-sm">
-            Delete
-          </button>
-          <button id="dialog-button-cancel" type="button" onclick="hide('dialog');" class="mt-2 w-full inline-flex justify-center rounded-md border border-gray-300 px-4 py-2 bg-white text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-            Cancel
-          </button>
+          <div class="mt-5 sm:mt-4 sm:ml-10 sm:pl-4 sm:flex">
+            <button id="dialog-button" type="button" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:w-auto sm:text-sm">
+              Delete
+            </button>
+            <button id="dialog-button-cancel" type="button" onclick="hide('dialog');" class="mt-2 w-full inline-flex justify-center rounded-md border border-gray-300 px-4 py-2 bg-white text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+              Cancel
+            </button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <script src="js/default-functions.js"></script>
-  <script src="js/sha512.js"></script>
-  <script src="js/passwords.js"></script>
+    <script src="js/default-functions.js"></script>
+    <script src="js/sha512.js"></script>
+    <script src="js/passwords.js"></script>
   </body>
 </html>
