--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Passky</title>
     <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
     <link rel="stylesheet" href="css/tailwind.min.css">
+    <link rel="stylesheet" href="css/themes/dark.css">
   </head>
 
   <body style="min-width: 300px;">
-    <div class="min-h-screen flex items-center justify-center bg-gray-50 py-6 px-4 sm:px-3 lg:px-8">
+    <div id="login-elements" class="min-h-screen flex items-center justify-center bg-gray-50 py-6 px-4 sm:px-3 lg:px-8">
       <div class="max-w-md w-full space-y-6">
         <div>
           <img class="mx-auto h-20 w-auto" src="images/logo.png" alt="Passky">
