--- a/index.html
+++ b/index.html
@@ -7,41 +7,42 @@
     <title>Passky</title>
     <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
     <link rel="stylesheet" href="css/tailwind.min.css">
-    <link rel="stylesheet" href="css/themes/dark.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link id="css-theme" type="text/css" rel="stylesheet" href="css/themes/dark.css">
+    <script src="js/header.js"></script>
   </head>
 
-  <body style="min-width: 300px;">
-    <div id="login-elements" class="min-h-screen flex items-center justify-center bg-gray-50 py-6 px-4 sm:px-3 lg:px-8">
+  <body>
+    <div class="primaryBackgroundColor min-h-screen flex items-center justify-center py-6 px-4 sm:px-3 lg:px-8">
       <div class="max-w-md w-full space-y-6">
         <div>
           <img class="mx-auto h-20 w-auto" src="images/logo.png" alt="Passky">
         </div>
-        <form class="mt-8 space-y-6" action="javascript:onBtnClick()">
+        <form id="login_form" class="mt-8 space-y-6">
           <input type="hidden" name="remember" value="true">
-
           <div class="rounded-md shadow-sm -space-y-px">
             <div>
               <label for="passky-server" class="sr-only">Server</label>
-              <input id="passky-server" list="servers" name="server" type="text" autocomplete="server" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Server">
+              <input id="passky-server" list="servers" name="server" type="text" autocomplete="server" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border rounded-t-md focus:outline-none focus:z-10 sm:text-sm" placeholder="Server">
               <datalist id="servers">
                 <option>https://eu1.passky.org</option>
               </datalist>
             </div>
             <div>
               <label for="username" class="sr-only">Username</label>
-              <input id="username" name="username" type="text" autocomplete="username" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Username">
+              <input id="username" name="username" type="text" autocomplete="username" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border focus:outline-none focus:z-10 sm:text-sm" placeholder="Username">
             </div>
             <div>
               <label for="password" class="sr-only">Password</label>
-              <input id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password">
+              <input id="password" name="password" type="password" autocomplete="current-password" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border rounded-b-md focus:outline-none focus:z-10 sm:text-sm" placeholder="Password">
             </div>
           </div>
-    
-          <div id="error-dialog" class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="error-dialog-modal-title" role="dialog" aria-modal="true" style="visibility: hidden;">
+
+          <div id="error-dialog" class="fixed z-10 inset-0 overflow-y-auto invisible" aria-labelledby="error-dialog-modal-title" role="dialog" aria-modal="true">
             <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
               <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
               <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-              <div class="dialog-background inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-sm sm:w-full sm:p-6">
+              <div class="secondaryBackgroundColor inline-block align-bottom rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-sm sm:w-full sm:p-6">
                 <div>
                   <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-red-100">
                     <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -49,29 +50,28 @@
                     </svg>
                   </div>
                   <div class="mt-3 text-center sm:mt-5">
-                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="error-dialog-modal-title">
+                    <h3 class="tertiaryColor text-lg leading-6 font-medium" id="error-dialog-modal-title">
                       ERROR
                     </h3>
                     <div class="mt-2">
-                      <p id="error-dialog-modal-text" class="text-sm text-gray-500">
+                      <p id="error-dialog-modal-text" class="secondaryColor text-sm">
                       </p>
                     </div>
                   </div>
                 </div>
                 <div class="mt-5 sm:mt-6">
-                  <button type="button" onclick="hide('error-dialog')" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
+                  <button type="button" id="error-dialog-okay" class="dangerButton inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base focus:outline-none font-medium sm:text-sm">
                     Okay
                   </button>
                 </div>
               </div>
             </div>
           </div>
-
-          <div style="text-align: center;">
-            <button id="btn_signin" type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <div class="text-center">
+            <button id="btn_signin" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
               Sign in
             </button>
-            <a href="register.html" class="text-center text-indigo-900">
+            <a href="register.html" class="primaryColor">
               Don't have account yet? Sign up here.
             </a>
           </div>
