--- a/passwords.html
+++ b/passwords.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/passwords.css">
     <link id="css-theme" type="text/css" rel="stylesheet" href="css/themes/dark.css">
+    <script src="js/lang.js"></script>
     <script src="js/header.js"></script>
     <script src="js/aes.js"></script>
-    <script src="js/prepasswords.js"></script>
   </head>
   <body class="primaryBackgroundColor">
     <nav class="secondaryBackgroundColor shadow">
@@ -23,14 +23,17 @@
               <img class="hidden lg:block h-8 w-auto" src="images/logo.png" alt="Passky">
             </div>
             <div class="hidden lg:ml-6 lg:flex lg:space-x-8">
-              <a href="#" class="mainMenuLinkSelected inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+              <a id="passwords-link" href="#" class="mainMenuLinkSelected inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Passwords
               </a>
-              <a href="export.html" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+              <a id="import-export-link" href="export.html" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Import & Export
               </a>
               <a id="theme-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Theme
+              </a>
+              <a id="lang-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+                Language
               </a>
               <a id="signout-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Sign out
@@ -61,9 +64,10 @@
     
       <div class="lg:hidden">
         <div id="mobile-menu" class="hidden pt-2 pb-3 space-y-1">
-          <a href="#" class="mainMenuMobileLinkSelected block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
-          <a href="export.html" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Import & Export</a>
+          <a id="passwords-link-mobile" href="#" class="mainMenuMobileLinkSelected block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
+          <a id="import-export-link-mobile" href="export.html" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Import & Export</a>
           <a id="theme-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Theme</a>
+          <a id="lang-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Language</a>
           <a id="signout-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</a>
         </div>
       </div>
@@ -84,11 +88,11 @@
 
     <div class="passwordsBackgroundColor shadow sm:rounded-lg">
       <div class="px-4 py-5 sm:p-6">
-        <h3 class="tertiaryColor text-lg leading-6 font-medium">
+        <h3 id="delete-account-title" class="tertiaryColor text-lg leading-6 font-medium">
           Delete your account
         </h3>
         <div class="secondaryColor mt-2 max-w-xl text-sm">
-          <p>
+          <p id="delete-account-text">
             Once you delete your account, you will lose all data associated with it.
           </p>
         </div>
