--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link id="css-theme" type="text/css" rel="stylesheet" href="css/themes/dark.css">
+    <script src="js/lang.js"></script>
     <script src="js/header.js"></script>
   </head>
 
@@ -71,13 +72,14 @@
             <button id="btn_signin" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
               Sign in
             </button>
-            <a href="register.html" class="primaryColor">
+            <a id="dont_have_account_link" href="register.html" class="primaryColor">
               Don't have account yet? Sign up here.
             </a>
           </div>
        </form>
       </div>
     </div>
+    <script src="js/aes.js"></script>
     <script src="js/default-functions.js"></script>
     <script src="js/sha512.js"></script>
     <script src="js/login.js"></script>
