--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link id="css-theme" type="text/css" rel="stylesheet" href="css/themes/dark.css">
+    <script src="js/lang.js"></script>
     <script src="js/header.js"></script>
   </head>
   <body>
@@ -73,10 +74,10 @@
           </div>
 
           <div class="text-center">
-            <button type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
+            <button id="btn_signup" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white">
               Sign up
             </button>
-            <a href="index.html" class="primaryColor">
+            <a id="already_have_account_link" href="index.html" class="primaryColor">
               Already have account? Sign in here.
             </a>
           </div>
