--- a/passwords.html
+++ b/passwords.html
@@ -32,9 +32,13 @@
               <a id="theme-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Theme
               </a>
-              <a id="lang-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
-                Language
-              </a>
+              <select id="lang-link" class="mainMenuLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base focus:outline-none font-medium">
+                <option value="en">English</option>
+                <option value="de">German</option>
+                <option value="nl">Dutch</option>
+                <option value="sl">Slovenian</option>
+                <option value="bs">Bosnian</option>
+              </select>
               <a id="signout-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Sign out
               </a>
@@ -67,7 +71,13 @@
           <a id="passwords-link-mobile" href="#" class="mainMenuMobileLinkSelected block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
           <a id="import-export-link-mobile" href="export.html" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Import & Export</a>
           <a id="theme-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Theme</a>
-          <a id="lang-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Language</a>
+          <select id="lang-link-mobile" class="mainMenuMobileLink border-transparent w-full block pl-3 pr-4 py-2 border-l-4 text-base focus:outline-none font-medium">
+            <option value="en">English</option>
+            <option value="de">German</option>
+            <option value="nl">Dutch</option>
+            <option value="sl">Slovenian</option>
+            <option value="bs">Bosnian</option>
+          </select>
           <a id="signout-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</a>
         </div>
       </div>
