--- a/export.html
+++ b/export.html
@@ -32,7 +32,7 @@
               <a id="theme-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Theme
               </a>
-              <select id="lang-link" class="mainMenuLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base focus:outline-none font-medium border-none">
+              <select id="lang-link" class="mainMenuLink border-transparent block pl-3 pr-4 py-2 border-b-4 text-base focus:outline-none font-medium">
                 <option value="en">English</option>
                 <option value="de">German</option>
                 <option value="nl">Dutch</option>
